5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4500/executions/1667_2318.log
== TEST (2019-04-16 16:17:41) 
-- CODE:
bruxos = input("Qual o nome do bruxo?: ")

if:
	Snape = "Espaço(m): 20.144", "Tempo (s): 4.289"
	
else:
	Valdermort = "Espaço(m): 19.984", "Tempo(s): 4.289"
	
print (Snape)
-- ERROR:
File "XXXX", line 3
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:45) 
-- CODE:
bruxos = input("Qual o nome do bruxo?: ")

if:
	Snape = "Espaço(m): 20.144", "Tempo (s): 4.289"
	
else:
	Valdermort = "Espaço(m): 19.984", "Tempo(s): 4.289"
	
print (Snape)
-- ERROR:
File "XXXX", line 3
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:17:46) 
-- CODE:
bruxos = input("Qual o nome do bruxo?: ")

if:
	Snape = "Espaço(m): 20.144", "Tempo (s): 4.289"
	
else:
	Valdermort = "Espaço(m): 19.984", "Tempo(s): 4.289"
	
print (Snape)
-- EXECUTION TIME:
0.125657
-- ERROR:
  File "/home/codebench/codes/1667/2318/main.py", line 3
    if:
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:17) 
-- CODE:
bruxos = input("Qual o nome do bruxo?: ")

if:
	Snape = 20.144/4.289
	
else:
	Valdermort = 19.984/4.289
	
print (Snape)
-- ERROR:
File "XXXX", line 3
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:20:44) 
-- CODE:
bruxos = input("Qual o nome do bruxo?: ")

if:
	Snape = 20.144/4.289
	
else:
	Valdermort = 19.984/4.289
	
print (bruxos)


-- ERROR:
File "XXXX", line 3
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:20:45) 
-- CODE:
bruxos = input("Qual o nome do bruxo?: ")

if:
	Snape = 20.144/4.289
	
else:
	Valdermort = 19.984/4.289
	
print (bruxos)


-- EXECUTION TIME:
0.175554
-- ERROR:
  File "/home/codebench/codes/1667/2318/main.py", line 3
    if:
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:56) 
-- CODE:
bruxos = input("Qual o nome do bruxo?: ")

if:
	Snape = 20.144/4.289
print(Snape)
	
else:
	Valdermort = 19.984/4.289
	
print (bruxos)
snape = 

-- ERROR:
File "XXXX", line 3
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:39) 
-- CODE:
bruxo1 = input("Snape")
bruxo2 = input("Valdemort")

print(bruxo1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    bruxo2 = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:24:40) 
-- CODE:
bruxo1 = input("Snape")
bruxo2 = input("Valdemort")

print(bruxo1)
-- EXECUTION TIME:
0.121474
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2318/main.py", line 2, in <module>
    bruxo2 = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:42) 
-- CODE:
bruxo1 = input("Snape")
bruxo2 = input("Valdemort")

print(bruxo1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    bruxo2 = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:01) 
-- CODE:
bruxo1 = input("Snape")
bruxo2 = input("Valdemort")

print(bruxo1)
print(bruxo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    bruxo2 = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:49) 
-- CODE:
bruxo1 = int(input("Snape: ", 20.114/0.4379))
bruxo2 = input("Valdemort: "), 19.984/4.289

print(bruxo1)
print(bruxo2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    bruxo1 = int(input("Snape: ", 20.114/0.4379))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:50) 
-- CODE:
bruxo1 = int(input("Snape: ", 20.114/0.4379))
bruxo2 = input("Valdemort: "), 19.984/4.289

print(bruxo1)
print(bruxo2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    bruxo1 = int(input("Snape: ", 20.114/0.4379))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:18) 
-- CODE:
bruxo1 = int(input("Snape: ", 20.114/0.4379))
bruxo2 = int(input("Valdemort: "), 19.984/4.289

print(bruxo1)
print(bruxo2)


-- ERROR:
File "XXXX", line 4
    print(bruxo1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:08) 
-- CODE:
bruxo1 = input("Snape: ")
bruxo2 = input("Valdemort: ")
velocidade1 = 20.114/0.4379
velocidade2 = 19.984/4.289
print(bruxo1, velocidade1)
print(bruxo2,velocidade2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    bruxo2 = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:31:34) 
-- CODE:
bruxo1 = input("Snape: ")
bruxo2 = input("Valdemort: ")
velocidade1 = 20.114/0.4379
velocidade2 = 19.984/4.289
print(bruxo1, velocidade1)
print(bruxo2,velocidade2)


-- EXECUTION TIME:
0.187056
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2318/main.py", line 2, in <module>
    bruxo2 = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:42) 
-- CODE:
bruxo1 = input("Snape: ")
bruxo2 = input("Valdemort: ")
velocidade1 = 20.114/0.4379
velocidade2 = 19.984/4.289
print(bruxo1, velocidade1)
print(bruxo2,velocidade2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    bruxo2 = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:32:06) 
-- CODE:
bruxo1 = input("Snape: ")
bruxo2 = input("Valdemort: ")
velocidade1 = 20.114/0.4379
velocidade2 = 19.984/4.289
print(bruxo1, velocidade1)
print(bruxo2,velocidade2)


-- EXECUTION TIME:
0.171048
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2318/main.py", line 2, in <module>
    bruxo2 = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:32:15) 
-- CODE:
bruxo1 = input("Snape: ")
bruxo2 = input("Valdemort: ")
velocidade1 = 20.114/0.4379
velocidade2 = 19.984/4.289
print(bruxo1, velocidade1)
print(bruxo2,velocidade2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    bruxo2 = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:32:17) 
-- CODE:
bruxo1 = input("Snape: ")
bruxo2 = input("Valdemort: ")
velocidade1 = 20.114/0.4379
velocidade2 = 19.984/4.289
print(bruxo1, velocidade1)
print(bruxo2,velocidade2)


-- EXECUTION TIME:
0.193884
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2318/main.py", line 2, in <module>
    bruxo2 = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:32:18) 
-- CODE:
bruxo1 = input("Snape: ")
bruxo2 = input("Valdemort: ")
velocidade1 = 20.114/0.4379
velocidade2 = 19.984/4.289
print(bruxo1, velocidade1)
print(bruxo2,velocidade2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    bruxo2 = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:32:19) 
-- CODE:
bruxo1 = input("Snape: ")
bruxo2 = input("Valdemort: ")
velocidade1 = 20.114/0.4379
velocidade2 = 19.984/4.289
print(bruxo1, velocidade1)
print(bruxo2,velocidade2)


-- EXECUTION TIME:
0.129538
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2318/main.py", line 2, in <module>
    bruxo2 = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
